# old-astatine

./: Cargo.toml
src/: lib.rs  main.rs  oldlib.rs
src/player/: camera.rs  mod.rs  player.rs
src/ui/: mod.rs
src/world/: blocks.rs  chunks.rs  mod.rs  position.rs  positions.rs  storage.rs
src/world/generation/: bedrock.rs  border.rs  caves.rs  dirt.rs  mod.rs  stone.rs  surface.rs  uni.rs
